[gd_scene load_steps=25 format=2]

[ext_resource path="res://script/1.2.1.gd" type="Script" id=1]
[ext_resource path="res://fonts/font2.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/font3.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/font1.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/style重新註冊.tres" type="StyleBox" id=6]
[ext_resource path="res://Pic/123.bg.png" type="Texture" id=7]
[ext_resource path="res://Pic/signup.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.737255, 0.870588, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.952941, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.909804, 0.909804, 0.909804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.909804, 0.909804, 0.909804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=13]
size = 26
outline_size = 1
outline_color = Color( 1, 1, 1, 0.482353 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=14]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 25
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.772549 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=19]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=20]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=21]
size = 25
outline_size = 1
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = -1
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.152941, 0.682353, 0.960784, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Node2D2" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundPicture" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 7 )
expand = true

[node name="BackgroundControl" type="Panel" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.5
margin_top = -429.0
margin_right = 380.5
margin_bottom = 351.0
custom_styles/panel = SubResource( 5 )

[node name="google" type="Button" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -322.0
margin_top = -188.0
margin_right = 322.0
margin_bottom = -14.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
icon = ExtResource( 8 )
flat = true
icon_align = 1

[node name="姓名" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 55.0
margin_top = 127.0
margin_right = 191.0
margin_bottom = 161.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "User Name"

[node name="UserNameLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -230.0
margin_right = -45.5
margin_bottom = -180.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 1.0

[node name="密碼" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 400.0
margin_top = 237.0
margin_right = 537.0
margin_bottom = 271.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Password"

[node name="PasswordLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
margin_left = 400.0
margin_top = 270.0
margin_right = 680.0
margin_bottom = 320.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 1.0

[node name="學校" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 55.0
margin_top = 237.0
margin_right = 145.0
margin_bottom = 271.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "School"

[node name="SchoolLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
margin_left = 55.0
margin_top = 270.0
margin_right = 335.0
margin_bottom = 320.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 1.0

[node name="生日" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 55.0
margin_top = 347.0
margin_right = 145.0
margin_bottom = 381.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Birth"

[node name="BirthdayLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
margin_left = 55.0
margin_top = 380.0
margin_right = 335.0
margin_bottom = 430.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "YYYY-MM-DD"
placeholder_alpha = 0.296

[node name="信箱" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 400.0
margin_top = 127.0
margin_right = 490.0
margin_bottom = 161.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Gamil"

[node name="MailLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
margin_left = 400.0
margin_top = 160.0
margin_right = 680.0
margin_bottom = 210.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 1.0

[node name="電話" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 400.0
margin_top = 347.0
margin_right = 490.0
margin_bottom = 381.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Phone"

[node name="PhoneLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
margin_left = 400.0
margin_top = 380.0
margin_right = 680.0
margin_bottom = 430.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 1.0

[node name="BackButton" type="Button" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -241.5
margin_top = -258.0
margin_right = -65.5
margin_bottom = -214.0
custom_colors/font_color_disabled = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.0156863, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
text = ">> 返回登入"

[node name="EnterButton" type="Button" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -315.0
margin_top = -328.0
margin_right = 315.0
margin_bottom = -280.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "選擇角色"

[node name="login" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 55.0
margin_top = 40.0
margin_right = 319.0
margin_bottom = 103.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Registration"

[node name="or" type="Label" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.5
margin_top = 182.5
margin_right = 295.5
margin_bottom = 209.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "----------------------------------  or  ----------------------------------"

[node name="Failed" type="WindowDialog" parent="BackgroundPicture"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/close_h_ofs = 30
custom_constants/close_v_ofs = -10
custom_styles/panel = SubResource( 17 )

[node name="Label" type="Label" parent="BackgroundPicture/Failed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -144.5
margin_right = 248.0
margin_bottom = 144.5
custom_styles/normal = SubResource( 18 )

[node name="big" type="Label" parent="BackgroundPicture/Failed/Label"]
margin_left = 43.0
margin_top = 47.0
margin_right = 243.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "註冊失敗..."

[node name="small" type="Label" parent="BackgroundPicture/Failed/Label"]
margin_left = 43.0
margin_top = 134.356
margin_right = 343.0
margin_bottom = 169.356
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "請檢查輸入資料！"

[node name="OKButton" type="Button" parent="BackgroundPicture/Failed/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -80.9461
margin_right = 58.5
margin_bottom = -37.9461
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 22 )
text = "確 定"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackgroundPicture/BackgroundControl/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="BackgroundPicture/BackgroundControl/EnterButton" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="BackgroundPicture/Failed/Label/OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
